compiler-core/src/parse/snapshots/gleam_core__parse__tests__parse_as_def_in_let_assert_no_as_keyword.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let assert \"error\" Ok(a) = some()"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:12
  │
1 │ let assert "error" Ok(a) = some()
  │            ^^^^^^^ I was expecting a '=' or 'as' after 'let assert'
