compiler-core/src/parse/snapshots/gleam_core__parse__tests__parse_as_def_in_let_assert_no_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: let assert as Ok(a) = some()
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:21
  │
1 │ let assert as Ok(a) = some()
  │                     ^ I was not expecting this

Found `=`, expected one of: 
- A pattern
