compiler-core/src/parse/snapshots/gleam_core__parse__tests__parse_as_def_in_let_assert_not_a_unit.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let assert \"custom\" <> \"error\" Ok(a) = some()"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:24
  │
1 │ let assert "custom" <> "error" Ok(a) = some()
  │                        ^^^^^^^ I was expecting a name here
