compiler-core/src/parse/snapshots/gleam_core__parse__tests__parse_punned_call_arg.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let arg = 1\n  wibble(:)\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:10
  │
4 │   wibble(:)
  │          ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.gleam.run/basics/assignments/
